# diogi

./: AGENTS.md  PLANS.md  README.md  pyproject.toml  setup.py
.github/workflows/: build.yml  python-publish.yml  tests.yml
diogi/: conventions.py  decorators.py  functions.py
tests/: test_functions.py
