[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "diogi"
version = "0.1.0"
description = "A library of tiny little functions to help do more while doing less."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "Michal Poreba" },
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
  "Intended Audience :: Developers",
  "Topic :: Software Development",
]

[project.urls]
Homepage = "https://github.com/michalporeba/diogi"
Repository = "https://github.com/michalporeba/diogi"

[dependency-groups]
dev = [
  "pytest",
]

[tool.setuptools.packages.find]
include = ["diogi"]

[tool.pytest.ini_options]
testpaths = ["tests"]
