
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "diogi"
version = "0.1.2"
description = "A library of tiny little functions to help do more while doing less."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "Michal Poreba" },
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
  "Intended Audience :: Developers",
  "Topic :: Software Development",
]

[project.urls]
Homepage = "https://github.com/michalporeba/diogi"
Repository = "https://github.com/michalporeba/diogi"

[dependency-groups]
dev = [
  "pytest",
  "ruff",
]

[tool.ruff]
# Target Python version
target-version = "py310"

# Exclude common directories
exclude = [
    ".git",
    ".venv",
    "build",
    "dist",
]

[tool.ruff.lint]
# Select rules:
# E: pycodestyle errors
# F: Pyflakes
# I: isort
# B: flake8-bugbear
# UP: pyupgrade
select = ["E", "F", "I", "B", "UP"]

# Ignore certain rules if they clash with your style
ignore = ["F405"]

[tool.ruff.lint.isort]
known-first-party = ["diogi"]

[tool.setuptools.packages.find]
include = ["diogi"]


[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "F403",    # don't complain about import *
    "F405",    # don't complain about undefined functions
    "S101",    # asserts allowed in tests...
    "ARG",     # Unused function args -> fixtures nevertheless are functionally relevant...
    "FBT",     # Don't care about booleans as positional arguments in tests, e.g. via @pytest.mark.parametrize()
    "PLR2004", # Magic value used in comparison, ...
    "S311",    # Standard pseudo-random generators are not suitable for cryptographic purposes
]
"diogi/aliases.py" = [
    "F403",
]
