
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "diogi"
version = "0.1.2"
description = "A library of tiny little functions to help do more while doing less."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "Michal Poreba" },
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
  "Intended Audience :: Developers",
  "Topic :: Software Development",
]

[project.urls]
Homepage = "https://github.com/michalporeba/diogi"
Repository = "https://github.com/michalporeba/diogi"

[dependency-groups]
dev = [
  "pytest",
  "ruff",
]

[tool.ruff]
# Target Python version
target-version = "py310"

# Exclude common directories
exclude = [
    ".git",
    ".venv",
    "build",
    "dist",
]

[tool.ruff.lint]
select = [
    "ARG",
    "E",    # pycodestyle errors
    "F",    # Pyflakes
    "FBT",
    "I",    # isort import ordering
    "B",    # flake8-bugbear correctness and footgun checks
    "UP",   # pyupgrade modern Python syntax suggestions
    "SIM",  # flake8-simplify opportunities to reduce redundant logic
    "C4",   # flake8-comprehensions checks for unnecessary comprehensions
    "PIE",  # flake8-pie miscellaneous readability and correctness checks
    "PL",
    "PT",   # flake8-pytest-style pytest-specific test conventions
    "RET",  # flake8-return consistency for explicit return behavior
    "S",
    "TCH",  # flake8-type-checking import hygiene for typing-only imports
    "RUF",  # Ruff-specific rules for cleanup and consistency
    "PERF", # Perflint performance-focused suggestions
]

# Ignore certain rules if they clash with your style
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["diogi"]

[tool.setuptools.packages.find]
include = ["diogi"]


[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "ARG",     # Unused function args -> fixtures nevertheless are functionally relevant...
    "F403",    # don't complain about import *
    "F405",    # don't complain about undefined functions
    "FBT",     # Don't care about booleans as positional arguments in tests, e.g. via @pytest.mark.parametrize()
    "PLR2004", # Magic value used in comparison, ...
    "S101",    # asserts allowed in tests...
    "S311",    # Standard pseudo-random generators are not suitable for cryptographic purposes
    "SIM300",  # In tests yoda asserts are prefered for readability
]
"diogi/aliases.py" = [
    "F403",
    "F405",
]
